added more articles and made them mobile responsive

--- a/communities.html
+++ b/communities.html
@@ -38,50 +38,45 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/article_images/blankets.jpg" class="blanket-donations-img">
-        <span class="blanket-main-heading">WINTER</span>
-        <span class="blanket-main-heading-2">BLANKET RUN</span>
+        <img src="/images/article_images/community.jpg" class="food-donations-img">
+        <span class="communities-main-heading">MAKING A DIFFERENCE</span>
+        <span class="communities-main-heading-2">IN THE COMMUNITY</span>
         <div class="article-content">
-            <p>Extreme poverty is a harsh reality that affects millions of people worldwide, and its effects are
-                particularly devastating during the winter months. For many people living in poverty, the winter brings
-                a
-                host of challenges, from harsh weather conditions to the difficulty of staying warm and dry. One of the
-                most significant struggles for people living in extreme poverty during the winter is the lack of access
-                to
-                warm clothing and blankets. Many families cannot afford to buy warm clothing or blankets, and as a
-                result, they are left exposed to the elements. This can lead to serious health problems, including
-                hypothermia and frostbite. Children are particularly vulnerable, as they may not have the ability to
-                keep
-                themselves warm and dry in harsh weather conditions.</p>
-            <p>That&#39;s where the Heart and Soul Foundation
-                comes in, and why donating blankets to our organization can make a real difference in the lives of these
-                children. By donating blankets to the Heart and Soul Foundation, you can help provide warmth and
-                comfort to children who may be struggling to stay warm during the colder months. Your donation can
-                help ensure that these children have access to the basic necessities they need to stay healthy and
-                happy, even when resources are scarce. In addition to providing warmth, your donation can also help
-                boost the morale of these children. Knowing that others care about their well-being can help them feel
-                more connected to their community and less alone in their struggles. </p>
+            <p>At our charity organization, we are passionate about creating positive change in our local community.
+                Through our programs and services, we strive to make a difference in the lives of individuals and
+                families who are facing challenges and adversity.
+            </p>
 
-            <p>In addition to providing warmth, your donation can also help
-                boost the morale of these children. Knowing that others care about their well-being can help them feel
-                more connected to their community and less alone in their struggles. This can have a positive impact on
-                their mental health and overall sense of well-being. We believe that everyone deserves to stay warm
-                and dry, especially during the winter months when the weather can be particularly harsh. By providing
-                warm clothing and blankets, we are helping to alleviate the suffering of those living in poverty, giving
-                them the tools they need to stay healthy and comfortable. Donating blankets and warm clothes to Heart
-                and Soul Foundation is an excellent way to make a tangible difference in the lives of those affected by
-                extreme poverty. Even a small donation can go a long way in providing warmth and comfort to those
-                who need it most. By supporting our organization, you can help to ensure that children and individuals
-                in impoverished communities have access to warm clothing and blankets, which can make a significant
-                difference in their lives.
-                I encourage you to consider making a donation today and help make a positive impact in the lives of
-                these children.
-                More details will be shared on all of our platforms.</p>
+            <p>One way that we are making a difference is by providing essential resources to those in need. Whether
+                it's food and clothing for families who are struggling to make ends meet or educational resources for
+                children who are falling behind in school, our organization is committed to supporting individuals and
+                families in our community.
 
+            </p>
+
+            <p>In addition to providing basic necessities, we are also focused on creating long-term solutions to the
+                issues facing our community. This includes offering job training and employment services to help
+                individuals build a stable and secure future for themselves and their families. We also provide
+                counseling and support services for those who are struggling with mental health issues, addiction, or
+                other challenges.
+            </p>
+
+            <p>One of the things that sets our organization apart is our commitment to collaboration and partnership. We
+                work closely with other community organizations, government agencies, and businesses to create a network
+                of support for those in need. By working together, we are able to leverage our resources and expertise
+                to create greater impact and reach more people in our community.</p>
+
+            <p>Through our programs and services, we have seen firsthand the positive impact that our organization is
+                having on the lives of individuals and families in our community. From providing a hot meal to someone
+                who is hungry to helping a family find stable housing, we know that our work is making a difference.</p>
+
+            <p>We are grateful to our donors, volunteers, and community partners who help make our work possible.
+                Together, we are creating a brighter future for our community, one person at a time.
+            </p>
         </div>
     </div>
-    <div class="also-in-this-section-blanket">
-        <h2 c>Also in this section</h2>
+    <div class="also-in-this-section-communities">
+        <h2>Also in this section</h2>
 
         <div class="article-1-light-shadow">
 
