--- a/cycle-poverty.html
+++ b/cycle-poverty.html
@@ -38,50 +38,38 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/article_images/blankets.jpg" class="blanket-donations-img">
-        <span class="blanket-main-heading">WINTER</span>
-        <span class="blanket-main-heading-2">BLANKET RUN</span>
+        <img src="/images/article_images/empty wallet.jpg" class="food-donations-img">
+        <span class="cycle-main-heading">CYCLE OF</span>
+        <span class="cycle-main-heading-2">POVERTY</span>
         <div class="article-content">
-            <p>Extreme poverty is a harsh reality that affects millions of people worldwide, and its effects are
-                particularly devastating during the winter months. For many people living in poverty, the winter brings
-                a
-                host of challenges, from harsh weather conditions to the difficulty of staying warm and dry. One of the
-                most significant struggles for people living in extreme poverty during the winter is the lack of access
-                to
-                warm clothing and blankets. Many families cannot afford to buy warm clothing or blankets, and as a
-                result, they are left exposed to the elements. This can lead to serious health problems, including
-                hypothermia and frostbite. Children are particularly vulnerable, as they may not have the ability to
-                keep
-                themselves warm and dry in harsh weather conditions.</p>
-            <p>That&#39;s where the Heart and Soul Foundation
-                comes in, and why donating blankets to our organization can make a real difference in the lives of these
-                children. By donating blankets to the Heart and Soul Foundation, you can help provide warmth and
-                comfort to children who may be struggling to stay warm during the colder months. Your donation can
-                help ensure that these children have access to the basic necessities they need to stay healthy and
-                happy, even when resources are scarce. In addition to providing warmth, your donation can also help
-                boost the morale of these children. Knowing that others care about their well-being can help them feel
-                more connected to their community and less alone in their struggles. </p>
-
-            <p>In addition to providing warmth, your donation can also help
-                boost the morale of these children. Knowing that others care about their well-being can help them feel
-                more connected to their community and less alone in their struggles. This can have a positive impact on
-                their mental health and overall sense of well-being. We believe that everyone deserves to stay warm
-                and dry, especially during the winter months when the weather can be particularly harsh. By providing
-                warm clothing and blankets, we are helping to alleviate the suffering of those living in poverty, giving
-                them the tools they need to stay healthy and comfortable. Donating blankets and warm clothes to Heart
-                and Soul Foundation is an excellent way to make a tangible difference in the lives of those affected by
-                extreme poverty. Even a small donation can go a long way in providing warmth and comfort to those
-                who need it most. By supporting our organization, you can help to ensure that children and individuals
-                in impoverished communities have access to warm clothing and blankets, which can make a significant
-                difference in their lives.
-                I encourage you to consider making a donation today and help make a positive impact in the lives of
-                these children.
-                More details will be shared on all of our platforms.</p>
-
+            <h3>Introduction:</h3>
+            <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+                committed to breaking the cycle of poverty by empowering communities and providing them with the
+                resources they need to succeed. In this article, we'll share some of the ways we're making a difference.
+            </p>
+            <h3>Education and Training:</h3>
+            <p>Another critical aspect of our work is providing education and training to individuals and communities.
+                We offer a range of programs, from basic literacy and numeracy to vocational training. By improving
+                access to education and training, we're equipping individuals with the skills
+                and knowledge they need to succeed in the workforce and build better lives for themselves and their
+                families.
+            </p>
+            <h3>Healthcare and nutrition:</h3>
+            <p>Our charity organization also works to improve access to healthcare and nutrition in impoverished
+                communities. We provide
+                nutrition programs, such as feeding programs and food security initiatives. By improving access to
+                healthcare and nutrition, we're helping to ensure that individuals and communities can thrive and break
+                the cycle of poverty.</p>
+            <h3>Conclusion:</h3>
+            <p>Poverty is a complex issue, but our charity organization is committed to breaking the cycle by empowering
+                communities and providing them with the resources they need to succeed. Through education and training
+                initiatives, and healthcare and nutrition services, we're making a
+                difference in the lives of people all around the country. We encourage others to get involved and
+                support our efforts to break the cycle of poverty and create a brighter future for all.</p>
         </div>
     </div>
-    <div class="also-in-this-section-blanket">
-        <h2 c>Also in this section</h2>
+    <div class="also-in-this-section-cycle">
+        <h2>Also in this section</h2>
 
         <div class="article-1-light-shadow">
 
