--- a/donations.html
+++ b/donations.html
@@ -38,50 +38,39 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/article_images/blankets.jpg" class="blanket-donations-img">
-        <span class="blanket-main-heading">WINTER</span>
-        <span class="blanket-main-heading-2">BLANKET RUN</span>
+        <img src="/images/donations.jpg" class="donations-img">
+        <span class="donations-main-heading">POWER OF</span>
+        <span class="donations-main-heading-2">DONATIONS</span>
         <div class="article-content">
-            <p>Extreme poverty is a harsh reality that affects millions of people worldwide, and its effects are
-                particularly devastating during the winter months. For many people living in poverty, the winter brings
-                a
-                host of challenges, from harsh weather conditions to the difficulty of staying warm and dry. One of the
-                most significant struggles for people living in extreme poverty during the winter is the lack of access
-                to
-                warm clothing and blankets. Many families cannot afford to buy warm clothing or blankets, and as a
-                result, they are left exposed to the elements. This can lead to serious health problems, including
-                hypothermia and frostbite. Children are particularly vulnerable, as they may not have the ability to
-                keep
-                themselves warm and dry in harsh weather conditions.</p>
-            <p>That&#39;s where the Heart and Soul Foundation
-                comes in, and why donating blankets to our organization can make a real difference in the lives of these
-                children. By donating blankets to the Heart and Soul Foundation, you can help provide warmth and
-                comfort to children who may be struggling to stay warm during the colder months. Your donation can
-                help ensure that these children have access to the basic necessities they need to stay healthy and
-                happy, even when resources are scarce. In addition to providing warmth, your donation can also help
-                boost the morale of these children. Knowing that others care about their well-being can help them feel
-                more connected to their community and less alone in their struggles. </p>
+            <p>The act of donating, whether it's money or time, can have an incredibly powerful impact on both the
+                recipient and the giver. Donations can help to create positive change in the world, whether it's in the
+                form of supporting a charitable organization or helping an individual in need.
+            </p>
 
-            <p>In addition to providing warmth, your donation can also help
-                boost the morale of these children. Knowing that others care about their well-being can help them feel
-                more connected to their community and less alone in their struggles. This can have a positive impact on
-                their mental health and overall sense of well-being. We believe that everyone deserves to stay warm
-                and dry, especially during the winter months when the weather can be particularly harsh. By providing
-                warm clothing and blankets, we are helping to alleviate the suffering of those living in poverty, giving
-                them the tools they need to stay healthy and comfortable. Donating blankets and warm clothes to Heart
-                and Soul Foundation is an excellent way to make a tangible difference in the lives of those affected by
-                extreme poverty. Even a small donation can go a long way in providing warmth and comfort to those
-                who need it most. By supporting our organization, you can help to ensure that children and individuals
-                in impoverished communities have access to warm clothing and blankets, which can make a significant
-                difference in their lives.
-                I encourage you to consider making a donation today and help make a positive impact in the lives of
-                these children.
-                More details will be shared on all of our platforms.</p>
+            <p>The power of donations lies not just in the tangible benefits they provide, but also in the intangible
+                ones. For example, the act of giving can create a sense of fulfilment and purpose for the donor, as
+                they are able to make a meaningful difference in the lives of others. In addition, donations can also
+                help to inspire others to give, creating a ripple effect of positive change in the community.
 
+            </p>
+
+            <p>Charitable donations can be used to fund important programs and services, such as providing food and
+                shelter for the homeless, supporting medical research, or aiding disaster relief efforts. Donations can
+                also help to support education and the arts, providing opportunities for individuals to learn and grow.
+            </p>
+
+            <p>One of the most powerful aspects of donations is their ability to create a sense of community and
+                connection. By giving to a cause, individuals can feel like they are a part of something larger than
+                themselves, and can connect with others who share similar values and goals.</p>
+
+            <p>Ultimately, the power of donations lies in the ability of individuals to make a positive impact on the
+                world around them. Whether it's a small donation to a local charity or a larger contribution to a global
+                cause, every donation has the potential to create meaningful change and make a difference in the lives
+                of others.</p>
         </div>
     </div>
-    <div class="also-in-this-section-blanket">
-        <h2 c>Also in this section</h2>
+    <div class="also-in-this-section-donations">
+        <h2>Also in this section</h2>
 
         <div class="article-1-light-shadow">
 
