--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="article-1-light-shadow">
 
                 <img src="/images/article_images/food_donations.jpg" class="article-1-picture">
-                <h4 class="article-title">FOOD DONATIONS</h4>
+                <h4 class="article-title">Food donations</h4>
                 <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
                     helping those in need by providing
                     food support to the children and elderly people in our care. There are many reasons why donating
@@ -118,7 +118,7 @@
             <div class="article-2-light-shadow">
 
                 <img src="/images/article_images/blankets.jpg" class="article-1-picture">
-                <h4 class="article-title">WINTER BLANKET RUN</h4>
+                <h4 class="article-title">Winter blanket run</h4>
                 <p class="article-2-paragraph-1">Winter can be an incredibly difficult time for many children,
                     particularly those from less privileged
                     backgrounds.
@@ -139,7 +139,7 @@
             <div class="article-3-light-shadow">
 
                 <img src="/images/article_images/golf.jpg" class="article-1-picture">
-                <h4 class="article-title">2023 GOLF DAY</h4>
+                <h4 class="article-title">2023 Golf day</h4>
                 <p class="article-3-paragraph-1">The 16th of May is an important day for our organization. We are
                     hosting a Golf day to raise funds for
                     our cause. Our organization is dedicated to providing a safe and nurturing environment for children
@@ -159,20 +159,17 @@
                     <div class="article-4-light-shadow">
 
                         <img src="/images/article_images/empty wallet.jpg" class="article-4-picture">
-                        <h4 class="article-title">Empowering Communities to Break the Cycle of Poverty</h4>
-                        <p class="article-4-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                            osdfkdof
-                            sopdksdo
-                            sopdksopdk</p>
-                        <p class="article-4-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                            osdfkdof
-                            sopdksdo
-                            sopdksopdk</p>
+                        <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
+                        <p class="article-4-paragraph-1">Poverty is a complex issue that affects millions of people
+                            worldwide. Our charity organization is committed to breaking the cycle of poverty by
+                            empowering communities and providing them with the resources they need to succeed. In this
+                            article, we'll share some of the ways we're making a difference.</p>
+                        <p class="article-4-paragraph-2"></p>
 
 
 
                         <h5 class="article-1-readmore"><i>
-                                <a href="about-us.html" class="link">Read More </a>
+                                <a href="cycle-poverty.html" class="link">Read More </a>
                             </i></h5>
                     </div>
                     <!-- article 5 -->
@@ -181,19 +178,16 @@
 
                         <img src="/images/donations.jpg" class="article-5-picture">
                         <h4 class="article-title">The power of donations</h4>
-                        <p class="article-5-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                            osdfkdof
-                            sopdksdo
-                            sopdksopdk</p>
-                        <p class="article-5-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                            osdfkdof
-                            sopdksdo
-                            sopdksopdk</p>
+                        <p class="article-5-paragraph-1">The act of donating, whether it's money or time, can have an
+                            incredibly powerful impact on both the recipient and the giver. Donations can help to create
+                            positive change in the world, whether it's in the form of supporting a charitable
+                            organization or helping an individual in need.</p>
+                        <p class="article-5-paragraph-2"></p>
 
 
 
                         <h5 class="article-1-readmore"><i>
-                                <a href="about-us.html" class="link">Read More </a>
+                                <a href="donations.html" class="link">Read More </a>
                             </i></h5>
                     </div>
 
@@ -201,21 +195,18 @@
 
                     <div class="article-6-light-shadow">
 
-                        <img src="/images/school-kid.jpg" class="article-6-picture">
-                        <h4 class="article-title">Save the children</h4>
-                        <p class="article-6-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                            osdfkdof
-                            sopdksdo
-                            sopdksopdk</p>
-                        <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                            osdfkdof
-                            sopdksdo
-                            sopdksopdk</p>
+                        <img src="/images/article_images/community.jpg" class="article-6-picture">
+                        <h4 class="article-title">Making a difference in the community</h4>
+                        <p class="article-5-paragraph-1">At our charity organization, we are passionate about creating
+                            positive change in our local community. Through our programs and services, we strive to make
+                            a difference in the lives of individuals and families who are facing challenges and
+                            adversity.</p>
+
 
 
 
                         <h5 class="article-1-readmore"><i>
-                                <a href="about-us.html" class="link">Read More </a>
+                                <a href="communities.html" class="link">Read More </a>
                             </i></h5>
                     </div>
                 </div>
