fixed the links double checked spelling errors

--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
     <nav>
 
         <div class="topnav" id="myTopnav">
-            <img src="/images/hear&soulLogo.png" class="logo-position">
-
+            <a href="index.html" class="logolink">
+                <img src="/images/hear&soulLogo.png" class="logo-position">
+            </a>
             <a href="index.html" class="active hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
             <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="gallery.html" class=" hover-underline-animation">GALLERY</a>
-            <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
+            <a href="contact-us.html" class=" hover-underline-animation">CONTACT US</a>
 
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
+            <div class="responsive-nav-gap"></div>
             <hr>
         </div>
 
@@ -72,7 +74,7 @@
 
         <div class="mission-statement-shadow">
             <img src="/images/painted_hands_heart.jpg">
-            <h2><u class="u">Mission Stat</u>ment</h2>
+            <h2><u class="u">Mission Stat</u>ement</h2>
 
             <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
                 children, with the help of our donors and sponsors. To do this in a sustainable manner, we believe in
@@ -94,122 +96,118 @@
         </div>
 
 
-        <h2 class="article-heading-how-we-help-children"><span class="u">READ OUR ARTI</span>CLES</h1>
+        <h2 class="article-heading-how-we-help-children"><span class="u">READ OUR ARTI</span>CLES</h2>
 
 
 
-            <div class="article-1-light-shadow">
+        <div class="article-1-light-shadow">
 
-                <img src="/images/article_images/food_donations.jpg" class="article-1-picture">
-                <h4 class="article-title">Food donations</h4>
-                <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
-                    helping those in need by providing
-                    food support to the children and elderly people in our care. There are many reasons why donating
-                    food
-                    to our organization is a worthwhile and impactful way to give back to your community....</p>
+            <img src="/images/article_images/food_donations.jpg" class="article-1-picture">
+            <h4 class="article-title">Food donations</h4>
+            <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
+                helping those in need by providing
+                food support to the children and elderly people in our care. There are many reasons why donating
+                food
+                to our organization is a worthwhile...</p>
 
-                <h5 class="article-1-readmore"><i>
-                        <a href="food-donations.html" class="link">Read More </a>
-                    </i></h5>
+            <h5 class="article-1-readmore"><i>
+                    <a href="food-donations.html" class="link">Read More </a>
+                </i></h5>
 
-            </div>
-            <!-- article 2 -->
+        </div>
+        <!-- article 2 -->
 
-            <div class="article-2-light-shadow">
+        <div class="article-2-light-shadow">
 
-                <img src="/images/article_images/blankets.jpg" class="article-1-picture">
-                <h4 class="article-title">Winter blanket run</h4>
-                <p class="article-2-paragraph-1">Winter can be an incredibly difficult time for many children,
-                    particularly those from less privileged
-                    backgrounds.
-                </p>
-                <p class="article-2-paragraph-2">As temperatures drop, these children may lack access to warm clothing
-                    and blankets,
-                    leaving them at risk of illness and discomfort...</p>
-
-
-
-                <h5 class="article-1-readmore"><i>
-                        <a href="blanket-run.html" class="link">Read More </a>
-                    </i></h5>
-            </div>
-
-            <!-- article 3 -->
-
-            <div class="article-3-light-shadow">
-
-                <img src="/images/article_images/golf.jpg" class="article-1-picture">
-                <h4 class="article-title">2023 Golf day</h4>
-                <p class="article-3-paragraph-1">The 16th of May is an important day for our organization. We are
-                    hosting a Golf day to raise funds for
-                    our cause. Our organization is dedicated to providing a safe and nurturing environment for children
-                    who
-                    are in need.</p>
-                <p class="article-3-paragraph-2">need. We believe that every child deserves a chance to learn, grow, and
-                    thrive. Unfortunately,
-                    many children in our community do not have access to the basic necessities...</p>
-
-
-                <h5 class="article-1-readmore"><i>
-                        <a href="golf-day.html" class="link">Read More </a>
-                    </i></h5>
-
-                <div class="bottom-articles">
-                    <!-- article 4 -->
-                    <div class="article-4-light-shadow">
-
-                        <img src="/images/article_images/empty wallet.jpg" class="article-4-picture">
-                        <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
-                        <p class="article-4-paragraph-1">Poverty is a complex issue that affects millions of people
-                            worldwide. Our charity organization is committed to breaking the cycle of poverty by
-                            empowering communities and providing them with the resources they need to succeed. In this
-                            article, we'll share some of the ways we're making a difference.</p>
-                        <p class="article-4-paragraph-2"></p>
+            <img src="/images/article_images/blankets.jpg" class="article-1-picture">
+            <h4 class="article-title">Winter blanket run</h4>
+            <p class="article-2-paragraph-1">Winter can be an incredibly difficult time for many children,
+                particularly those from less privileged
+                backgrounds.
+            </p>
+            <p class="article-2-paragraph-2">As temperatures drop, these children may lack access to warm clothing
+                and blankets,
+                leaving them at risk of illness and discomfort...</p>
 
 
 
-                        <h5 class="article-1-readmore"><i>
-                                <a href="cycle-poverty.html" class="link">Read More </a>
-                            </i></h5>
-                    </div>
-                    <!-- article 5 -->
+            <h5 class="article-1-readmore"><i>
+                    <a href="blanket-run.html" class="link">Read More </a>
+                </i></h5>
+        </div>
 
-                    <div class="article-5-light-shadow">
+        <!-- article 3 -->
 
-                        <img src="/images/donations.jpg" class="article-5-picture">
-                        <h4 class="article-title">The power of donations</h4>
-                        <p class="article-5-paragraph-1">The act of donating, whether it's money or time, can have an
-                            incredibly powerful impact on both the recipient and the giver. Donations can help to create
-                            positive change in the world, whether it's in the form of supporting a charitable
-                            organization or helping an individual in need.</p>
-                        <p class="article-5-paragraph-2"></p>
+        <div class="article-3-light-shadow">
 
-
-
-                        <h5 class="article-1-readmore"><i>
-                                <a href="donations.html" class="link">Read More </a>
-                            </i></h5>
-                    </div>
-
-                    <!-- article 6 -->
-
-                    <div class="article-6-light-shadow">
-
-                        <img src="/images/article_images/community.jpg" class="article-6-picture">
-                        <h4 class="article-title">Making a difference in the community</h4>
-                        <p class="article-5-paragraph-1">At our charity organization, we are passionate about creating
-                            positive change in our local community. Through our programs and services, we strive to make
-                            a difference in the lives of individuals and families who are facing challenges and
-                            adversity.</p>
+            <img src="/images/article_images/golf.jpg" class="article-1-picture">
+            <h4 class="article-title">2023 Golf day</h4>
+            <p class="article-3-paragraph-1">The 16th of May is an important day for our organization. We are
+                hosting a Golf day to raise funds for
+                our cause. Our organization is dedicated to providing a safe and nurturing environment for children
+                who
+                are in need.</p>
+            <p class="article-3-paragraph-2"></p>
 
 
+            <h5 class="article-1-readmore"><i>
+                    <a href="golf-day.html" class="link">Read More </a>
+                </i></h5>
+
+            <div class="bottom-articles">
+                <!-- article 4 -->
+                <div class="article-4-light-shadow">
+
+                    <img src="/images/article_images/empty wallet.jpg" class="article-4-picture">
+                    <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
+                    <p class="article-4-paragraph-1">Poverty is a complex issue that affects millions of people
+                        worldwide. Our charity organization is committed to breaking the cycle of poverty by
+                        empowering communities and providing them....</p>
+                    <p class="article-4-paragraph-2"></p>
 
 
-                        <h5 class="article-1-readmore"><i>
-                                <a href="communities.html" class="link">Read More </a>
-                            </i></h5>
-                    </div>
+
+                    <h5 class="article-1-readmore"><i>
+                            <a href="cycle-poverty.html" class="link">Read More </a>
+                        </i></h5>
                 </div>
+                <!-- article 5 -->
+
+                <div class="article-5-light-shadow">
+
+                    <img src="/images/donations.jpg" class="article-5-picture">
+                    <h4 class="article-title">The power of donations</h4>
+                    <p class="article-5-paragraph-1">The act of donating, whether it's money or time, can have an
+                        incredibly powerful impact on both the recipient and the giver. Donations can help to create
+                        positive change in the world, whether it's in the form of supporting a charitable
+                        organization or helping an individual in need.</p>
+                    <p class="article-5-paragraph-2"></p>
+
+
+
+                    <h5 class="article-1-readmore"><i>
+                            <a href="donations.html" class="link">Read More </a>
+                        </i></h5>
+                </div>
+
+                <!-- article 6 -->
+
+                <div class="article-6-light-shadow">
+
+                    <img src="/images/article_images/community.jpg" class="article-6-picture">
+                    <h4 class="article-title">Making a difference in the community</h4>
+                    <p class="article-5-paragraph-1">At our charity organization, we are passionate about creating
+                        positive change in our local community. Through our programs and services, we strive to make
+                        a ...</p>
+
+
+
+
+                    <h5 class="article-1-readmore"><i>
+                            <a href="communities.html" class="link">Read More </a>
+                        </i></h5>
+                </div>
+            </div>
     </main>
     <!-- -------------------------------------------------footer -->
     <div class="footer-gap">
