--- a/about-us.html
+++ b/about-us.html
@@ -21,16 +21,19 @@
     <nav>
 
         <div class="topnav" id="myTopnav">
-            <img src="/images/hear&soulLogo.png" class="logo-position">
-
+            <a href="index.html" class="logolink">
+                <img src="/images/hear&soulLogo.png" class="logo-position">
+            </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
-            <a href="about-us.html" class="active hover-underline-animation">ABOUT US</a>
+            <a href="about-us.html" class=" active hover-underline-animation">ABOUT US</a>
             <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
-            <a href="gallery.html" class="hover-underline-animation">GALLERY</a>
-            <a href="#about" class=" hover-underline-animation">CONTACT US</a>
+            <a href="gallery.html" class=" hover-underline-animation">GALLERY</a>
+            <a href="contact-us.html" class=" hover-underline-animation">CONTACT US</a>
+
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
+            <div class="responsive-nav-gap"></div>
             <hr>
         </div>
 
@@ -59,6 +62,16 @@
                 solutions that empower individuals of all ages.</p>
 
         </div>
+
+
+
+
+
+
+
+
+
+
 
         <!-- ______________________flex items ___________________________________-->
 
